--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="navigation_drawer_button">See Suggested Navigation Drawer</string>
     <string name="navigation_drawer_text">This is a navigation drawer example</string>
     <string name="see_main_activity_button">See Common, Unsuggested Side Menu</string>
+    <string name="main_text">This is a common pattern, but against Google\'s suggestions</string>
 </resources>
